TEST-ASSIGNMENT: add endpoint to create a contact form request
